--- a/3100s24.html
+++ b/3100s24.html
@@ -157,6 +157,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/12</span><span class="course-task col-md-10"> 
+                                                       Differentiability implies continuity. Constant multiple rule, sum rule, product rule, quotient rule. Statement of chain rule.
+                                                      </span></li>
+  
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/10</span><span class="course-task col-md-10"> 
                                                         Limit laws. Definition of the derivatives. Simple examples, including the derivative of $x^n$ for natural numbers $n$. Derivative laws.
                                                       </span></li>
@@ -358,7 +363,7 @@ Both at office hours and in class, you should expect that your input will be tre
                                                 <ul>    
                                                     <li class="with-bullet">Midterm #1: Friday, February 9</li>
                                                     <li class="with-bullet">Midterm #2: Friday, March 22</li>
-                                                    <li class="with-bullet">Midterm #3: Friday, April 19</li>
+                                                    <li class="with-bullet">Midterm #3: <del>Friday, April 19</del> Monday, April 22</li>
                                                     <li class="with-bullet">Final exam: Wed, May 1, 12:00-3:00 PM (location TBA)</li>
                                                 </ul>
                                                 <p>No make-up exams will be given. The final exam is <strong>cumulative</strong>.</p>
