--- a/4000s24.html
+++ b/4000s24.html
@@ -120,6 +120,8 @@
                                             <div class="module-content col-sm-9">                                     
                                                   <ul class="course-summary-to-date">
 
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #3 learning objectives/study guide</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/exam3review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li> 
                                                     
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #7</span><span class="col-md-2 due-date">due 4/17</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s24/hw7.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li> 
