--- a/4000s24.html
+++ b/4000s24.html
@@ -162,8 +162,22 @@
                                             <div class="module-content col-sm-9">
 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/22</span><span class="course-task col-md-10"> 
+                                                      Introduction to degrees of field extensions. Examples.
+                                                    </span></li> 
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/19</span><span class="course-task col-md-10"> 
+                                                       Exam #3.
+                                                    </span></li> 
+
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/17</span><span class="course-task col-md-10"> 
+                                                        More on splitting fields.
+                                                     </span></li> 
+ 
+
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/15</span><span class="course-task col-md-10"> 
-                                                        If $F$ is a field and $f(x) \in F[x]$ is nonconstant, there is an extension $K$ of $F$ where $f$ has a root. If $F$ is a field and $f(x) \in F[x]$ is nonconstant, there is an extension $K$ of $F$ where $f$ splits. Example of constructing a splitting field for $x^3-2 \in \mathbb{Q}[x]$.
+                                                        If $F$ is a field and $f(x) \in F[x]$ is nonconstant, there is an extension $K$ of $F$ where $f$ has a root. If $F$ is a field and $f(x) \in F[x]$ is nonconstant, there is an extension $K$ of $F$ where $f$ splits. Example of constructing a splitting field for $x^3-2$ over $\mathbb{Q}$.
                                                         </span></li> 
 
 
