--- a/4000s24.html
+++ b/4000s24.html
@@ -162,6 +162,11 @@
                                             <div class="module-content col-sm-9">
 
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-md-1">4/24</span><span class="course-task col-md-10"> 
+                                                        The degree is multiplicative &quot;in towers.&quot; If $K$ is an extension of $F$ of finite degree, every element of $K$ is algebraic over $F$.
+                                                      </span></li> 
+  
                                                     <li class="with-bullet"><span class="course-date col-md-1">4/22</span><span class="course-task col-md-10"> 
                                                       Introduction to degrees of field extensions. Examples.
                                                     </span></li> 
