--- a/3100f24.html
+++ b/3100f24.html
@@ -155,6 +155,10 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/9</span><span class="course-task col-md-10"> 
+                                                        Proof of integral comparison test. Example: $\sum_{k=1}^{\infty} k e^{-k^2}$ converges.
+                                                        </span></li>    
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/7</span><span class="course-task col-md-10"> 
                                                         Eventual Comparison Test. Limit Comparison Test. Statement of Integral Comparison Test and application to $p$-series test.
                                                         </span></li>    
