--- a/3200f24.html
+++ b/3200f24.html
@@ -129,6 +129,15 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                <ul class="assignment-list"> 
+
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #4</span><span class="col-md-2 due-date">due 10/18</span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                </li>
+
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Read sections 4.4--4.5.</span><span class="col-md-2 due-date">complete by 10/14</span>
+                                                </li>
+
+
+
                                                 <li class="with-bullet"><span class="col-md-9 assignment-name">Exam #1 learning objectives/review sheet</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3200f24/exam1review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
 
@@ -170,6 +179,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/9</span><span class="course-task col-md-10"> 
+                                                        &quot;Beyond element chasing&quot;.
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/7</span><span class="course-task col-md-10"> 
                                                         More practice proving set equality through element chasing. Start of &quot;beyond element chasing&quot;.
                                                     </span></li>
