--- a/3100f24.html
+++ b/3100f24.html
@@ -155,6 +155,10 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/11</span><span class="course-task col-md-10"> 
+                                                        Absolute convergence. Absolute convergence implies convergence. Alternating series test.
+                                                        </span></li>    
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/9</span><span class="course-task col-md-10"> 
                                                         Proof of integral comparison test. Example: $\sum_{k=1}^{\infty} k e^{-k^2}$ converges.
                                                         </span></li>    
