--- a/3200f24.html
+++ b/3200f24.html
@@ -179,6 +179,12 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/11</span><span class="course-task col-md-10"> 
+                                                        &quot;Beyond element chasing&quot;, conclusion. Start of discussion of product sets.
+                                                    </span></li>
+
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/9</span><span class="course-task col-md-10"> 
                                                         &quot;Beyond element chasing&quot;.
                                                     </span></li>
