--- a/3100f24.html
+++ b/3100f24.html
@@ -121,6 +121,11 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
+
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #6
+                                                    </span><span class="col-md-2 due-date">due 11/4</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
+
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Exam 
                                                         #2 learning objectives/review sheet
                                                     </span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f24/exam2review.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
@@ -160,6 +165,24 @@
                                             </div>
                                              <div class="module-content col-sm-9"> 
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/25</span><span class="course-task col-md-10"> 
+                                                        Proof of the theorem on the general form of the DOC. Start of continuity. For the rest of the course, we will be using Kenneth Ross's book <a href="https://link.springer.com/book/10.1007/978-1-4614-6271-2">Elementary Analysis</a> as our reference. The link should allow you to download the PDF for free (thanks UGA!).
+                                                        </span></li>    
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/23</span><span class="course-task col-md-10"> 
+                                                        Power series. Computing domains of convergence. The general form of the DOC (statement and preparation for proof).
+                                                        </span></li>    
+
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">10/21</span><span class="course-task col-md-10"> 
+                                                           Rearranging the alternating harmonic series to sum to zero. 
+                                                            </span></li>    
+    
+
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/18</span><span class="course-task col-md-10"> 
+                                                       Exam #2.
+                                                        </span></li>    
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/16</span><span class="course-task col-md-10"> 
                                                         Proof of ratio test. A mathematical magic trick. Statement of Riemann's rearrangement theorem.
