--- a/3200f24.html
+++ b/3200f24.html
@@ -188,6 +188,28 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/25</span><span class="course-task col-md-10"> 
+                                                        More on index sets. Definition of relations.
+                                                    </span></li>
+
+
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/23</span><span class="course-task col-md-10"> 
+                                                        Completion of power sets. Introduction to index sets.
+                                                    </span></li>
+
+
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/21</span><span class="course-task col-md-10"> 
+                                                        More proving identities with power sets.
+                                                    </span></li>
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">10/18</span><span class="course-task col-md-10"> 
+                                                        Introduction to power sets. Proving identities with power sets.
+                                                    </span></li>
+
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/16</span><span class="course-task col-md-10"> 
                                                         Formulas for $|A\cup B \cup C|$ and $|A\cup B \cup C \cup D|$. Counting integers $1\le n \le 105$ divisible by $3, 5$, or $7$.
                                                     </span></li>
