--- a/3200f24.html
+++ b/3200f24.html
@@ -190,7 +190,7 @@
                                                 <ul class="course-summary-to-date">
 
                                                     <li class="with-bullet"><span class="course-date col-sm-1">10/25</span><span class="course-task col-md-10"> 
-                                                        More on index sets. Definition of relations.
+                                                        More on index sets. Definition of relations. Pass back HW #4.
                                                     </span></li>
 
 
