--- a/research.html
+++ b/research.html
@@ -2929,12 +2929,12 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Mean values of multiplicative functions and applications to residue-class distribution</span>  <span class="paper-author">(w/ A. Singha Roy)</span>          </h4>
                         <p>
-                            <a href="https://www.cambridge.org/core/journals/proceedings-of-the-edinburgh-mathematical-society"><span class="journal-name">Proc. Edinburgh Math. Soc.</span></a> 267 (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://www.cambridge.org/core/journals/proceedings-of-the-edinburgh-mathematical-society"><span class="journal-name">Proc. Edinburgh Math. Soc.</span></a> (<span class="paper-year">to appear</span>)</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/meanphi.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
-                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper146" aria-expanded="false" aria-controls="paper146">Abstract</a>
-                            <div class="collapse" id="paper146">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper147" aria-expanded="false" aria-controls="paper147">Abstract</a>
+                            <div class="collapse" id="paper147">
                                 <div class="well paper-abtract-content">
                                     <p>   We provide a uniform bound on the partial sums of multiplicative functions under very general hypotheses. As an application, we 
                                         deduce the equidistribution of the Alladi-Erd\H{o}s function $A(n) = \sum_{p^k \parallel n} k p$ in residue classes to moduli $q \le (\log x)^K$ (with $K$ fixed but arbitrary), improving known estimates on 
