--- a/4000s25.html
+++ b/4000s25.html
@@ -116,7 +116,7 @@
                                                 <h6>Assignments and other course material</h6>
                                             </div>
                                             <div class="module-content col-sm-9">                                            <ul class="course-summary-to-date">
-                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #1</span><span class="col-md-2 due-date">due 1/25</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                <li class="with-bullet"><span class="col-md-9 assignment-name">Homework #1</span><span class="col-md-2 due-date">due 1/24</span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                 </li>
                                             	<li class="with-bullet"><span class="col-md-9 assignment-name">Handout on properties of the integers</span><span class="col-md-2 due-date"></span><span class="col-md-1"><a href="http://pollack.uga.edu/4000s25/integers.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
@@ -130,6 +130,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">1/17</span><span class="course-task col-md-10">Even and odd numbers. Division Algorithm in $\mathbb{Z}$. Divisibility (def + basic properties). Statement of Euclid's algorithm. </span></li> 
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/15</span><span class="course-task col-md-10">Proof that $1$ is the least element of $\mathbb{Z}^{+}$. Principle of Mathematical Induction. Exponents. Binomial theorem.</span></li> 
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/13</span><span class="course-task col-md-10">Proof $a\cdot 0 = 0$. Laws of inequalities. $1 \in \mathbb{Z}^{+}$. Statement that $1$ is the least element of $\mathbb{Z}^{+}$. </span></li> 
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/10</span><span class="course-task col-md-10">(S)no(w) class.</span></li> 
