--- a/research.html
+++ b/research.html
@@ -2978,6 +2978,14 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/TypicalElasticity.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
 </li>        
 
+<li class="col-sm-12 list-item with-bullet">
+    <div class="col-sm-10">
+        <h4> <span class="paper-title">Revisiting the Lind--Reichardt Counterexample to Hasse's Local-Global Principle</span>
+        <span class="paper-author">(w/ D.B. Leep and D.B. Shapiro)</span></h4>
+    </div>
+    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/LGP-9.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+</li>        
+
 
 </ul>
                                             </div>
