--- a/4000s25.html
+++ b/4000s25.html
@@ -132,6 +132,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+                                                <li class="with-bullet"><span class="course-date col-md-1">1/27</span><span class="course-task col-md-10">Prime numbers. Euclid's Lemma. The Fundamental Theorem of Arithmetic. </span></li> 
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/24</span><span class="course-task col-md-10">Euclid's algorithm: examples, why it terminates, and why its output is the gcd. $\gcd(a,b)=ax+by$ for some $x,y \in \mathbb{Z}$ (proof on HW). The Fundamental gcd lemma: If $a\mid bc$ and $\gcd(a,b)=1$, then $a\mid c$.  </span></li> 
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/17</span><span class="course-task col-md-10">Even and odd numbers. Division Algorithm in $\mathbb{Z}$. Divisibility (def + basic properties). Statement of Euclid's algorithm. </span></li> 
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/15</span><span class="course-task col-md-10">Proof that $1$ is the least element of $\mathbb{Z}^{+}$. Principle of Mathematical Induction. Exponents. Binomial theorem.</span></li> 
