--- a/4000s25.html
+++ b/4000s25.html
@@ -134,6 +134,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                             <ul class="course-summary-to-date">
+
+                                                <li class="with-bullet"><span class="course-date col-md-1">1/31</span><span class="course-task col-md-10">Proof of Fermat's little theorem. Chinese Remainder Theorem, Part I: A system of congruences with two coprime moduli $m, n$ always has a solution. Start of Part II: proof that if $N_0$ is one solution, any $N\equiv N_0\pmod{mn}$ is also a solution.
+                                                </span></li> 
+
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/29</span><span class="course-task col-md-10">Congruences mod $m$. Congruence mod $m$ is an equivalence relation on $\mathbb{Z}$. Congruence mod $m$ respects $+$ and $\cdot$. If $m \in \mathbb{Z}^{+}$, then each integer is congruent mod $m$ to precisely one of $0,1,2,\dots,m-1$. Examples. Statement of Fermat's little theorem.</span></li> 
                                                 <li class="with-bullet"><span class="course-date col-md-1">1/27</span><span class="course-task col-md-10">Prime numbers. Euclid's Lemma. The Fundamental Theorem of Arithmetic. </span></li> 
 
