--- a/research.html
+++ b/research.html
@@ -3235,7 +3235,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                                         <div class="col-sm-10">
                                                             <h4>    <span class="paper-title">How nonunique is your factorization?</span>
                                                             </h4>
-                                                            <p><span>AMS Eastern Sectional Meeting, April 2025
+                                                            <p><span>AMS Eastern Sectional Meeting, April 2025. See also: <a href="elasticity-integers2.pdf" target="_blank">longer version</a> for the 2025 Integers conference.
                                                             </span></p>
                                                         </div>
                                                         <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/AMS-CT-Elasticity.pdf" target="_blank" class="btn btn--sm btn-pdf">Slides</a></div>
