--- a/research.html
+++ b/research.html
@@ -3045,6 +3045,18 @@ for almost all split-free $f$. Underlying these estimates are new statistical th
 </li>        
 
 
+<li class="col-sm-12 list-item with-bullet">
+    <div class="col-sm-10">
+        <h4> <span class="paper-title">Elementary abelian Sylow subgroups of the
+multiplicative group</span>
+        <span class="paper-author">(w/ S. Morales and G. Polanco)</span></h4>
+    </div>
+    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/noncyclicfollowup.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+</li>        
+
+
+
+
 
 </ul>
                                             </div>
