--- a/research.html
+++ b/research.html
@@ -2887,7 +2887,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Two variants of a theorem of Schinzel and Wójcik on multiplicative orders</span>  <span class="paper-author"></span>          </h4>
                         <p>
-                            <a href="https://www.impan.pl/en/publishing-house/journals-and-series/acta-arithmetica"><span class="journal-name">Acta Arithmetica</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://www.impan.pl/en/publishing-house/journals-and-series/acta-arithmetica"><span class="journal-name">Acta Arithmetica</span></a> 218 (<span class="paper-year">2025</span>), 337--345</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/SchinzelWojcik.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
@@ -2949,7 +2949,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Towards a Schinzel--Wójcik theorem for number fields</span>  <span class="paper-author"></span>          </h4>
                         <p>
-                            <a href="https://link.springer.com/journal/40879"><span class="journal-name">European J. Math.</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://link.springer.com/journal/40879"><span class="journal-name">European J. Math.</span></a> 11 (<span class="paper-year">2025</span>), no. 2, paper no. 26, 16 pages</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/SW-numberfield.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
